--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,12 @@
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 			<title>扇贝Sidekick</title>
 			<link rel="stylesheet" type="text/css" href="stylesheets/chromebay.css">
+			<link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui-1.9.1.custom.min.css">
 			<script type="text/javascript" src="javascripts/jquery-1.8.3.min.js"></script>
 			<script type="text/javascript" src="javascripts/chromebay.js"></script>
 			<script type="text/javascript" src="javascripts/init.js"></script>
+			<script type="text/javascript" src="javascripts/chromebay.js"></script>
+			<script type="text/javascript" src="javascripts/jquery-ui-1.9.1.custom.min.js"></script>
 	</head>
 	<body>
 		<div id="chromebay-container">
