--- a/popup.html
+++ b/popup.html
@@ -6,16 +6,11 @@
 			<link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui-1.9.1.custom.min.css">
 			<script type="text/javascript" src="javascripts/jquery-1.8.3.min.js"></script>
 			<script type="text/javascript" src="javascripts/chromebay.js"></script>
-			<script type="text/javascript" src="javascripts/init.js"></script>
-			<script type="text/javascript" src="javascripts/chromebay.js"></script>
+			<script type="text/javascript" src="javascripts/browser-action.js"></script>
 			<script type="text/javascript" src="javascripts/jquery-ui-1.9.1.custom.min.js"></script>
 	</head>
 	<body>
 		<div id="chromebay-container">
-			<div id="chromebay-loginLink">
-				<a href="http://www.shanbay.com/accounts/login/" target="_blank">登录扇贝</a>
-				<span>请检查网络连接，确认可以正常访问扇贝网</span>
-			</div>
 			<div id="chromebay-main">
 				<div>
 					<input type="text" name="word" class="word_input"/>
@@ -24,7 +19,6 @@
 						<img src="images/ajax-loader.gif"/ width="32" height="32" alt="查询中" id="chromebay-imgQuerying"/>
 					</a>
 				</div>
-				<audio id="chromebay-audio"></audio>
 				<div id="chromebay-content">
 				</div>
 			</div>
