--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>扇贝Chrome插件 by Bing573</title>
+    <title>扇贝Chrome插件 by Bing</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -66,7 +66,7 @@
 <p><a href="https://chrome.google.com/webstore/detail/%E6%89%87%E8%B4%9Dsidekick/lpecbhfejddelijiphilcmbgohoiphnb?hl=zh-CN&amp;gl=001">到Chrome应用商店安装该扩展</a></p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="http:/nanbing.me">Bing573</a></p>
+        <p>This project is maintained by <a href="http:/nanbing.me">Bing</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
