add chrome web store image link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li><a href="https://github.com/Bing573/shanbay-sidekick/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/Bing573/shanbay-sidekick">View On <strong>GitHub</strong></a></li>
         </ul>
+        <p><a href="https://chrome.google.com/webstore/detail/%E6%89%87%E8%B4%9Dsidekick/lpecbhfejddelijiphilcmbgohoiphnb?hl=zh-CN&amp;gl=001"><img src="img/chrome_store.png"></a></p>
       </header>
       <section>
         <h2>
@@ -62,8 +63,6 @@
 <p>sk, Tab键, +号:启用划词翻译;</p>
 
 <p><img src="https://raw.githubusercontent.com/Bing573/shanbay-sidekick/master/screenshot/shanbay-sidekick-screenshot-4.png" alt="划词翻译"></p>
-
-<p><a href="https://chrome.google.com/webstore/detail/%E6%89%87%E8%B4%9Dsidekick/lpecbhfejddelijiphilcmbgohoiphnb?hl=zh-CN&amp;gl=001">到Chrome应用商店安装该扩展</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="http://nanbing.me">Bing</a></p>
